chore: remove obsolete locy-growth.png image file